[project]
name = "aiohttp-test"
version = "0.1.0"
description = ""
authors = [
    { name = "Gregory Danielson", email = "gregory.danielson3@gmail.com" },
]
dependencies = ["memory-profiler", "aiohttp", "requests"]
requires-python = ">=3.5"
license = { text = "" }

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"

[tool]
[tool.pdm]
[[tool.pdm.source]]
name = "pypi"
url = "https://pypi.org/simple"
verify_ssl = true

[tool.pdm.dev-dependencies]
dev = []
